--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@ layout: compress
 
     <div class="hero lazyload" data-bg="{{site.url}}/assets/img/posts/sleek_lg.jpg">
       <div class="hero__wrap">
-        <h1 class="hero__title">A Lazy Developer</h1>
+        <h1 class="hero__title">JongP</h1>
         <p class="hero__meta">I'm JongGyun Park. A Front-End Developer. </p>
       </div>
     </div>
