--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
         <div class="container header__links-wrapper">
           <a class="header__link" href="{{ '/' | relative_url }}" itemprop="url"><span itemprop="name">Home</span></a>
           <a class="header__link" href="{{ '/about' | relative_url }}" itemprop="url"><span itemprop="name">About</span></a>
-          <a class="header__link" href="{{ '/contact' | relative_url }}" itemprop="url">
+          <a style="display:none;" class="header__link" href="{{ '/contact' | relative_url }}" itemprop="url">
             <span itemprop="name">Contact</span>
           </a>
         </div>
