--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@ layout: compress
     <div class="hero lazyload" data-bg="{{site.url}}/assets/img/posts/sleek_lg.jpg">
       <div class="hero__wrap">
         <h1 class="hero__title">JongP</h1>
-        <p class="hero__meta">I'm JongGyun Park. A Front-End Developer. </p>
+        <p class="hero__meta">I'm JongGyun Park. A Web Developer. </p>
       </div>
     </div>
 
